[package]
name = "myredis"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
dashmap = "5"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
